fix: css gaps for larger screen resolutions exlm-1114 (#490)

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1089,6 +1089,10 @@ body[class^='browse-'] main {
       padding-top: 40px;
       padding-bottom: 40px;
     }
+
+    & .browse-filters-form .browse-hide-section + .browse-topics {
+      margin-bottom: 8px;
+    }
   }
 }
 
@@ -1137,6 +1141,21 @@ body[class^='browse-'] main {
 
     & main > div.section {
       padding: 30px 32px;
+    }
+
+    & main > div.section.browse-breadcrumb-container {
+      padding-top: 24px;
+      padding-bottom: 0;
+    }
+
+    & main > div.section.sign-up-container {
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+
+    & .section.browse-filters-container {
+      padding-top: 0;
+      padding-bottom: 0;
     }
   }
 }
